# rs-article

./: AGENTS.md  Cargo.toml  _headers  index.html  wrangler.toml
.cargo/: config.toml
.github/workflows/: cloudflare-pages.yml  rust.yml
openspec/changes/enable-cloudflare-pages-deploy/: design.md  proposal.md  tasks.md
openspec/changes/enable-cloudflare-pages-deploy/specs/cloudflare-pages-deploy/: spec.md
openspec/changes/rs-grammar-tui/: design.md  proposal.md  tasks.md
openspec/changes/rs-grammar-tui/specs/clipboard-paste/: spec.md
openspec/changes/rs-grammar-tui/specs/dialect-selector/: spec.md
openspec/changes/rs-grammar-tui/specs/file-handler/: spec.md
openspec/changes/rs-grammar-tui/specs/grammar-checker/: spec.md
openspec/changes/rs-grammar-tui/specs/tui-editor/: spec.md
src/: lib.rs  main.rs  web.rs
