[package]
name = "rs-grammar"
version = "0.1.0"
edition = "2024"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["native"]
native = ["dep:ratatui", "dep:arboard", "dep:crossterm"]
web = []

[dependencies]
harper-core = "0.5"

ratatui = { version = "0.29", optional = true }
arboard = { version = "3.4", optional = true }
crossterm = { version = "0.28", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
]

[dependencies.js-sys]
version = "0.3"

[dependencies.wasm-bindgen]
version = "0.2"

[dependencies.console_error_panic_hook]
version = "0.1"

[dev-dependencies]
wasm-bindgen-cli = "0.2"

[profile.release]
opt-level = "z"
lto = true
